namespaces/mlflow/ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    field.cattle.io/publicEndpoints: '[{"addresses":["35.241.255.137"],"port":443,"protocol":"HTTPS","serviceName":"mlflow:mlflow-server","ingressName":"mlflow:mlflow","hostname":"mlflow.35.241.255.137.nip.io","path":"/","allNodes":false}]'
  name: mlflow
  namespace: mlflow
spec:
  ingressClassName: nginx
  rules:
  - host: mlflow.35.241.255.137.nip.io
    http:
      paths:
      - backend:
          service:
            name: mlflow-server
            port:
              number: 5000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - mlflow.35.241.255.137.nip.io
    secretName: tls-mlflow
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    field.cattle.io/publicEndpoints: '[{"addresses":["35.241.255.137"],"port":443,"protocol":"HTTPS","serviceName":"mlflow:tensorboard","ingressName":"mlflow:tensorboard","hostname":"tensorboard.35.241.255.137.nip.io","path":"/","allNodes":false}]'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
  name: tensorboard
  namespace: mlflow
spec:
  ingressClassName: nginx
  rules:
  - host: tensorboard.35.241.255.137.nip.io
    http:
      paths:
      - backend:
          service:
            name: tensorboard
            port:
              number: 6006
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - tensorboard.35.241.255.137.nip.io
    secretName: tls-tensorboard
